--- a/pure/contact.html
+++ b/pure/contact.html
@@ -184,7 +184,7 @@
 
 -->
 <!-- Google maps  -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzA22auDNIFSRiTPytfZVhtuFG_KHBhFQ&callback=googleMapInit"></script>
+<script async defer src="https://maps.app.goo.gl/bbo4rg2qwFytFyo79"></script>
 <!-- end Google Maps -->
 
 
